--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,11 @@
 # Created by https://www.toptal.com/developers/gitignore/api/windows,node,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,node,visualstudiocode
 
+.csr
+.pem
+
+*.pem
+*.csr
 ### Node ###
 # Logs
 logs
